--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="../src/dropdowns.js" defer></script>
+    <!-- <script src="../src/dropdowns.js" defer></script> -->
     <script type="module" src="../src/pages/index.js" defer></script>
     <title>Les Petits Plats</title>
   </head>
@@ -59,7 +59,7 @@
     <main>
       <section class="filters-section">
         <div class="filters">
-          <div class="dropdown" data-dropdown>
+          <!-- <div class="dropdown" data-dropdown>
             <button class="link" data-dropdown-button>
               <span>Ingrédients</span>
               <svg
@@ -211,313 +211,11 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
         <span class="total-recipes">50 recettes</span>
       </section>
-      <section class="recipes-section">
-        <!-- <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="card">
-          <div class="card__image">
-            <img src="./assets/recipes/Recette01.jpg" alt="#" />
-          </div>
-          <span class="card__duration">10min</span>
-          <div class="card__content">
-            <h2 class="card__title">Titre de la recette</h2>
-            <h3 class="card__subtitle">Recette</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit
-              eos est illum aspernatur, mollitia totam, sint possimus ut amet
-              fugit vero maiores dolores corrupti in voluptatibus eveniet
-              quisquam nam!
-            </p>
-            <h3 class="card__subtitle">Ingrédients</h3>
-            <div class="ingredients-container">
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-              <div class="ingredient">
-                <span class="ingredient__name">Sucre</span>
-                <span class="ingredient__value">1 cuilliere a soupe</span>
-              </div>
-            </div>
-          </div>
-        </article> -->
-      </section>
+      <section class="recipes-section"></section>
     </main>
   </body>
 </html>
