--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <!-- <script src="../src/dropdowns.js" defer></script> -->
     <script type="module" src="../src/pages/index.js" defer></script>
     <title>Les Petits Plats</title>
   </head>
@@ -58,161 +57,7 @@
     </header>
     <main>
       <section class="filters-section">
-        <div class="filters">
-          <!-- <div class="dropdown" data-dropdown>
-            <button class="link" data-dropdown-button>
-              <span>Ingrédients</span>
-              <svg
-                width="15"
-                height="8"
-                viewBox="0 0 15 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M1 7L7.5 1L14 7"
-                  stroke="#1B1B1B"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </button>
-            <div class="dropdown-menu">
-              <form class="select" action="#">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="10" cy="10" r="9.5" stroke="white" />
-                  <line
-                    x1="18.3536"
-                    y1="18.6464"
-                    x2="27.3536"
-                    y2="27.6464"
-                    stroke="white"
-                  />
-                </svg>
-                <input type="text" />
-              </form>
-              <ul class="added-items"></ul>
-              <ul class="list">
-                <li class="list-item">
-                  <a href="#">Jus de citron</a>
-                </li>
-                <li class="list-item">
-                  <a href="#">Tomate</a>
-                </li>
-                <li class="list-item">
-                  <a href="#">Poulet</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="dropdown" data-dropdown>
-            <button class="link" data-dropdown-button>
-              <span>Appareils</span>
-              <svg
-                width="15"
-                height="8"
-                viewBox="0 0 15 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M1 7L7.5 1L14 7"
-                  stroke="#1B1B1B"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </button>
-            <div class="dropdown-menu">
-              <form class="select" action="#">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="10" cy="10" r="9.5" stroke="white" />
-                  <line
-                    x1="18.3536"
-                    y1="18.6464"
-                    x2="27.3536"
-                    y2="27.6464"
-                    stroke="white"
-                  />
-                </svg>
-                <input type="text" />
-              </form>
-              <ul class="added-items"></ul>
-              <ul class="list">
-                <li class="list-item">
-                  <a href="#">Jus de citron</a>
-                </li>
-                <li class="list-item">
-                  <a href="#">Tomate</a>
-                </li>
-                <li class="list-item">
-                  <a href="#">Poulet</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="dropdown" data-dropdown>
-            <button class="link" data-dropdown-button>
-              <span>Ustensiles</span>
-              <svg
-                width="15"
-                height="8"
-                viewBox="0 0 15 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M1 7L7.5 1L14 7"
-                  stroke="#1B1B1B"
-                  stroke-linecap="round"
-                />
-              </svg>
-            </button>
-            <div class="dropdown-menu">
-              <form class="select" action="#">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="10" cy="10" r="9.5" stroke="white" />
-                  <line
-                    x1="18.3536"
-                    y1="18.6464"
-                    x2="27.3536"
-                    y2="27.6464"
-                    stroke="white"
-                  />
-                </svg>
-                <input type="text" />
-              </form>
-              <ul class="added-items"></ul>
-              <ul class="list">
-                <li class="list-item">
-                  <a href="#">Jus de citron</a>
-                </li>
-                <li class="list-item">
-                  <a href="#">Tomate</a>
-                </li>
-                <li class="list-item">
-                  <a href="#">Poulet</a>
-                </li>
-              </ul>
-            </div>
-          </div> -->
-        </div>
+        <div class="filters"></div>
         <span class="total-recipes">50 recettes</span>
       </section>
       <section class="recipes-section"></section>
