--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
         <div class="filters"></div>
         <span class="total-recipes">50 recettes</span>
       </section>
+      <section class="tags"></section>
       <section class="recipes-section"></section>
     </main>
   </body>
