--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <img
         class="header__logo"
-        src="./assets/images/logo.svg"
+        src="./public/assets/images/logo.svg"
         alt="Les Petits Plats"
       />
       <div class="header__content">
