--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./public/css/style.css" />
-    <script type="module" src="./src/pages/index.js" defer></script>
     <title>Les Petits Plats</title>
   </head>
   <body>
@@ -63,5 +62,7 @@
       <section class="tags"></section>
       <section class="recipes-section"></section>
     </main>
+
+    <script type="module" src="./src/pages/index.js"></script>
   </body>
 </html>
